--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,48 @@
     <script type="module" src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% endblock %}
 </body>
+<footer class="site-footer">
+    <div class="footer-top">
+        <div class="footer-container">
+            <div class="footer-col">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li>Vishalakshi B. Hegde Campus, Sangam, Kundapura - 576201</li>
+                    <li><a href="tel:+918254235588">082542 35588</a></li>
+                    <li><a href="mailto:bbhegdecollegekundapur@rediffmail.com">bbhegdecollegekundapur@rediffmail.com</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Women Ethnic</a></li>
+                    <li><a href="#">Women Western</a></li>
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#">Kids</a></li>
+                    <li><a href="#">Home &amp; Kitchen</a></li>
+                    <li><a href="#">Beauty &amp; Health</a></li>
+                    <li><a href="#">Jewellery &amp; Accessories</a></li>
+                    <li><a href="#">Bags &amp; Footwear</a></li>
+                    <li><a href="#">Electronics</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Follow us</h3>
+                <div class="social-links">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="footer-container ">
+            <center><p class="footer-text">© 2025 Dr. B. B. Hegde First Grade College, Kundapura - All Rights Reserved</p></center>
+        </div>
+    </div>
+</footer>
 </html>
 
 
