--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -37,6 +37,28 @@ img{
     display: flex;
     align-items: center;
 }
+.collegeLogoContainer{
+    width: 60px;
+    height: 60px;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.college-logo{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    border-radius: 50%;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+
+.college-logo:hover{
+    transform: scale(1.1);
+}
+
 .logoContainer{
     width: 155px;
 }
