--- a/app/templates/curtain.html
+++ b/app/templates/curtain.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Buzzer - Digital Curtain Reveal</title>
+    <title>Campus Bazar - Digital Curtain Reveal</title>
     <link rel="icon" href="{{ url_for('static', filename='img/bbhc-logo.svg') }}" />
     <style>
         * {
@@ -442,9 +442,9 @@
         
         <div class="brand-container">
             <div class="brand-logo">
-                <img src="{{ url_for('static', filename='img/logo-removebg-preview.png') }}" alt="Campus Buzzer" />
+                <img src="{{ url_for('static', filename='img/logo-removebg-preview.png') }}" alt="Campus Bazar" />
             </div>
-            <h1 class="brand-name">Campus Buzzer</h1>
+            <h1 class="brand-name">Campus Bazar</h1>
             <p class="brand-subtitle">Welcome to Our Digital Platform</p>
         </div>
         
