--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -250,7 +250,7 @@
                     <img src="{{ url_for('static', filename='images/icons/free-delivery.svg') }}" alt="Free Delivery" />
                 </div>
                 <h3>Free Delivery</h3>
-                
+                <p>No fees, just ease</p>
             </div>
             <div class="feature-item">
                 <div class="feature-icon">
