--- a/app/templates/curtain.html
+++ b/app/templates/curtain.html
@@ -432,7 +432,7 @@
     
     <div class="curtain-container">
         <!-- Background Video -->
-        <video class="background-video" muted>
+        <video class="background-video">
             <source src="{{ url_for('static', filename='img/v.mp4') }}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
