--- a/app/templates/curtain.html
+++ b/app/templates/curtain.html
@@ -516,7 +516,7 @@
                 
                 // Redirect after showing brand and loading text
                 setTimeout(() => {
-                    window.location.href = '/';
+                    window.location.href = '/curtain';
                 }, 8000); // 8 seconds after video ends
             });
         }
